--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body>
-    <p>Hello World, we are software developers!</p>
+    <section id="welcome-section">
+      <h1>Augustine and Arnaud</h1>>
+    </section>>
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
