Projects section added with a project-tile class

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
   <body>
     <section id="welcome-section">
-      <h1>Augustine and Arnaud</h1>>
-    </section>>
+      <h1>Augustine and Arnaud</h1>
+    </section>
+    <section id="projects">
+      <h2 class="project-tile">First project</h2>
+    </section>
 
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
