--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
 
   <body>
+    <nav id="navbar"></nav>
     <section id="welcome-section">
       <h1>Augustine and Arnaud</h1>
     </section>
     <section id="projects">
       <h2 class="project-tile">First project</h2>
+      <a href="https://www.delftstack.com/howto/javascript/javascript-max-of-array/">Link to my portfolio</a>
     </section>
+
 
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
