--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   </head>
 
   <body>
-    <nav id="navbar"></nav>
-    <section id="welcome-section">
+    <nav id="navbar">
+      <a href="#welcome-section">Welcome</a>
+      <a href="#projects">Projects</a>
+      <a id="profile-link" target="_blank" href="https://github.com/austync/Augustine-and-Arnaud-Team">My github</a>
+    </nav>
+    <section style="height: 800px;" id="welcome-section">
       <h1>Augustine and Arnaud</h1>
     </section>
-    <section id="projects">
+    <section style="height: 800px;" id="projects">
       <h2 class="project-tile">First project</h2>
       <a href="https://www.delftstack.com/howto/javascript/javascript-max-of-array/">Link to my portfolio</a>
     </section>
