style css added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <a href="#projects">Projects</a>
       <a id="profile-link" target="_blank" href="https://github.com/austync/Augustine-and-Arnaud-Team">My github</a>
     </nav>
-    <section style="height: 800px;" id="welcome-section">
+    <section id="welcome-section">
       <h1>Augustine and Arnaud</h1>
     </section>
-    <section style="height: 800px;" id="projects">
+    <section id="projects">
       <h2 class="project-tile">First project</h2>
       <a href="https://www.delftstack.com/howto/javascript/javascript-max-of-array/">Link to my portfolio</a>
     </section>
